--- a/package.json
+++ b/package.json
@@ -1,36 +1,56 @@
 {
-   "name": "arms-typeorm",
-   "version": "0.0.1",
-   "description": "Awesome project developed with TypeORM.",
-   "type": "commonjs",
-   "devDependencies": {
-      "@types/bcrypt": "^5.0.0",
-      "@types/dotenv": "^8.2.0",
-      "@types/express": "^4.17.14",
-      "@types/jsonwebtoken": "^8.5.9",
-      "@types/morgan": "^1.9.3",
-      "@types/morgan-json": "^1.1.0",
-      "@types/node": "^16.11.64",
-      "dotenv": "^16.0.3",
-      "ts-node": "10.7.0",
-      "typescript": "4.5.2"
-   },
-   "dependencies": {
-      "bcrypt": "^5.0.1",
-      "cors": "^2.8.5",
-      "express": "^4.18.1",
-      "joi": "^17.6.2",
-      "joi-password": "^4.0.0",
-      "jsonwebtoken": "^8.5.1",
-      "morgan": "^1.10.0",
-      "morgan-json": "^1.1.0",
-      "pg": "^8.4.0",
-      "reflect-metadata": "^0.1.13",
-      "typeorm": "0.3.10",
-      "winston": "^3.8.2"
-   },
-   "scripts": {
-      "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
-   }
+  "name": "arms-typeorm",
+  "version": "0.0.1",
+  "description": "Awesome project developed with TypeORM.",
+  "type": "commonjs",
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/morgan": "^1.9.3",
+    "@types/morgan-json": "^1.1.0",
+    "@types/node": "^16.11.64",
+    "dotenv": "^16.0.3",
+    "ts-node": "10.7.0",
+    "typescript": "4.5.2"
+  },
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "joi": "^17.6.2",
+    "joi-password": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "morgan-json": "^1.1.0",
+    "pg": "^8.4.0",
+    "redis": "^4.3.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "0.3.10",
+    "winston": "^3.8.2"
+  },
+  "main": "src/server.ts",
+  "scripts": {
+    "start": "ts-node src/server.ts",
+    "dev": "npx nodemon",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "sync-db": "npx typeorm schema:sync",
+    "build": "npx tsc"
+  },
+  "keywords": [
+    "arms",
+    "ts",
+    "typeorm",
+    "es6",
+    "template",
+    "renting",
+    "apartment",
+    "system",
+    "management",
+    "tenant",
+    "room",
+    "redis"
+  ]
 }
